--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,157 @@
+/* --- Reset CSS --- */
+* {
+  all: unset;
+  display: revert;
+}
+
+/* --- Couleurs --- */
+:root {
+  --black1: #000000;
+  --black2: #000814;
+  --blue1: #001d3d;
+  --blue2: #003566;
+  --yellow1: #ffc300;
+  --yellow2: #ffd60a;
+  --grey1: #AEAEAE;
+  --grey2: #D9D9D9;
+  --white: #FFFFFF;
+
+}
+
+/* --- Typographies --- */
 h1 {
-  color: blue;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  font-size: 6.25em;
+  background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  color: transparent;
+  text-align: center;
 }
-
+h2 {
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 2.625em;
+  color: var(--blue2);
+  text-align: center;
+}
+h3{
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 3em;
+  background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  color: transparent;
+  text-align: center;
+}
 p {
-  color: grey;
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.125em;
+  color: var(--black2);
+  text-align: center;
+}
+a:hover {
+  cursor: pointer;
+}
+input {
+  cursor: text;
 }
 
-/* --- A PROPOS --- */
-/* Slideshow */
+/* --- Général --- */
+header {
+  display: flex;
+  flex-direction: column;
+}
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+section {
+  width: 100%;
+  padding: 80px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.content {
+  width: 1280px;
+}
+
+/* --- Navigation --- */
+.nav-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  background-color: var(--blue1);
+  padding: 40px 60px;
+}
+.logo {
+  width: 10%;
+}
+nav {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr 1fr;
+}
+nav li {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 1.125em;
+  color: var(--white);
+}
+.nav-accueil {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  list-style-type: none;
+}
+.nav-la-carte {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  list-style-type: none;
+}
+.nav-a-propos {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  list-style-type: none;
+}
+.nav-contact {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  list-style-type: none;
+}
+.nav-telephone {
+  grid-column-start: 7;
+  grid-column-end: 8;
+  list-style-type: disc;
+}
