--- a/styles.css
+++ b/styles.css
@@ -100,25 +100,28 @@ section {
   flex-wrap: nowrap;
   justify-content: space-between;
   background-color: var(--blue1);
-  padding: 40px 60px;
+  padding: 38px 60px;
+}
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 .logo {
   width: 10%;
 }
-nav {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 nav ul {
-  width: 100%;
+  width: 90%;
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr 1fr;
+  align-items: center;
+  grid-template-columns: 3fr 1fr 1fr 1fr 1fr 2fr 2fr;
+  grid-gap: 12px;
 }
 nav li {
+  padding-top: 10px;
+  list-style-type: none;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -130,28 +133,56 @@ nav li {
   font-size: 1.125em;
   color: var(--white);
 }
+nav li a {
+  text-decoration: none;
+}
+nav li a:hover {
+  text-decoration: none;
+  color: var(--yellow2);
+}
+nav li a:active {
+  text-decoration: none;
+  color: var(--yellow2);
+}
 .nav-accueil {
+  min-width: 100px;
   grid-column-start: 2;
   grid-column-end: 3;
-  list-style-type: none;
 }
 .nav-la-carte {
+  min-width: 100px;
   grid-column-start: 3;
   grid-column-end: 4;
-  list-style-type: none;
 }
 .nav-a-propos {
+  min-width: 100px;
   grid-column-start: 4;
   grid-column-end: 5;
-  list-style-type: none;
 }
 .nav-contact {
+  min-width: 100px;
   grid-column-start: 5;
   grid-column-end: 6;
-  list-style-type: none;
 }
 .nav-telephone {
+  min-width: 100px;
   grid-column-start: 7;
   grid-column-end: 8;
-  list-style-type: disc;
+  overflow: visible;
+}
+li.nav-telephone {
+  position: relative;
+  min-width: 200px;
+  font-size: 1.5em;
+  background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  color: transparent;
+  text-align: right;
+}
+li.nav-telephone img {
+  position: absolute;
+  height: 36px;
+  left: 0;
 }
