Structure du bloc infos pratiques & iframe map

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
   display: revert;
   box-sizing: border-box;
 }
+a:hover {
+  cursor: pointer;
+}
+input {
+  cursor: text;
+}
 
 /* --- Couleurs --- */
 :root {
@@ -76,7 +82,7 @@ h5 {
   color: var(--white);
   text-align: center;
 }
-p {
+p, li {
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -86,11 +92,17 @@ p {
   color: var(--black2);
   text-align: center;
 }
-a:hover {
-  cursor: pointer;
+.regular {
+  font-weight: 400;
 }
-input {
-  cursor: text;
+.medium {
+  font-weight: 500;
+}
+.semi-bold {
+  font-weight: 600;
+}
+.bold {
+  font-weight: 700;
 }
 
 /* --- Général --- */
@@ -134,6 +146,7 @@ section {
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: auto;
   gap: 24px;
+  overflow: hidden;
 }
 .titre {
   width: 100%;
@@ -264,10 +277,11 @@ li.nav-telephone {
   color: transparent;
   text-align: right;
 }
-li.nav-telephone img {
+li.nav-telephone::before {
   position: absolute;
-  height: 36px;
+  content: url(/images/icons/icon-telephone.svg);
   left: 0;
+  vertical-align: middle;
 }
 
 /* --- Page d'Accueil --- */
@@ -390,4 +404,47 @@ header {
   padding: 0 0 20px 60px;
   color: var(--white);
   text-align: left;
+}
+/* Infos Pratiques */
+.map-container {
+  width: 100%;
+  height: 600px;
+  border-radius: 24px;
+  overflow: hidden;
+  background-color: #000000;
+}
+.map-container iframe {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+}
+.acces, .horaires, .services {
+  margin-bottom: 40px;
+}
+.acces h4, .horaires h4,
+.services h4, .paiement h4 {
+  text-align: left;
+  margin-bottom: 16px;
+}
+.acces ul li, .horaires ul li,
+.services p, .paiement p {
+  list-style: none;
+  font-size: 1em;
+  line-height: 1.5em;
+  text-align: left !important;
+}
+.adresse::before {
+  content: url(/images/icons/icon-adresse.png);
+  margin-right: 6px;
+  vertical-align: middle;
+}
+.parking::before {
+  content: url(/images/icons/icon-parking.png);
+  margin-right: 6px;
+  vertical-align: middle;
+}
+.bus::before {
+  content: url(/images/icons/icon-bus.png);
+  margin-right: 6px;
+  vertical-align: middle;
 }
