--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,16 @@ h5 {
   color: var(--white);
   text-align: center;
 }
+h6 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.125em;
+  line-height: normal;
+  color: var(--white);
+  text-align: left;
+  text-transform: uppercase;
+}
 p, li {
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
@@ -133,8 +143,21 @@ section {
   flex-wrap: wrap;
   justify-content: center;
 }
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 60px 24px;
+  background-color: var(--black2);
+}
 .container {
   width: 1280px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.small-container {
+  width: 960px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -152,6 +175,14 @@ section {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;
+  gap: 24px;
+  overflow: hidden;
+}
+.grid-3 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: auto;
   gap: 24px;
   overflow: hidden;
@@ -484,4 +515,52 @@ section.contact {
 .reservation-mentions {
   font-weight: 700;
   font-size: 0.75em;
+}
+/* Footer */
+.coordonnees h6, .sous-navigation h6, .reseaux-sociaux h6 {
+  margin-bottom: 20px;
+}
+.coordonnees {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  max-width: 230px;
+  margin: 0 auto;
+}
+.sous-navigation {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  max-width: 110px;
+  margin: 0 auto;
+}
+.reseaux-sociaux {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  max-width: 170px;
+  margin: 0 auto;
+}
+.mentions-legales {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+.coordonnees ul, .sous-navigation ul, .reseaux-sociaux ul {
+  list-style: none;
+}
+.reseaux-sociaux li {
+  display: inline-flex;
+  vertical-align: middle;
+  margin-right: 12px;
+}
+.coordonnees li, .sous-navigation li, .reseaux-sociaux li {
+  color: var(--grey1) !important;
+  font-size: 1em;
+  text-align: left;
+  padding-bottom: 20px;
+}
+.mentions-legales p {
+  color: var(--grey1) !important;
+  font-size: 1em;
+  text-align: center;
+}
+.dev-nm {
+  content: url(/images/icons/icon-nm.png);
 }
