--- a/styles.css
+++ b/styles.css
@@ -294,14 +294,21 @@ footer {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  /* background-color: var(--blue1); */
-  background-color: #001d3d00;
   padding: 38px 60px;
   overflow: hidden;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 0;
+}
+.add-bgcolor-scroll {
+  background-color: #001d3d;
+  box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.25);
+  transition: background-color 400ms ease-in-out;
+}
+.remove-bgcolor-scroll {
+  background-color: #001d3d00;
+  transition: background-color 400ms ease-in-out;
 }
 nav {
   width: 100%;
