--- a/styles.css
+++ b/styles.css
@@ -610,6 +610,7 @@ section.contact {
 .mentions-legales {
   grid-column-start: 1;
   grid-column-end: 4;
+  width: 100%;
 }
 .coordonnees ul, .sous-navigation ul, .reseaux-sociaux ul {
   list-style: none;
@@ -1067,4 +1068,153 @@ textarea {
   line-height: normal;
   color: var(--white);
   margin-top: 8px;
+}
+/* ------------------------------------------- */
+/* -------------- MEDIA QUERIES -------------- */
+/* ------------------------------------------- */
+
+/* --- Tablet --- */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+}
+
+/* --- Smartphone --- */
+@media screen and  (max-width: 767px) {
+
+  /* Général */
+  .container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .small-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .full-container {
+    width: 100%;
+  }
+
+  /* Navigation mobile */
+  .add-bgcolor-scroll {
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: background-color 0.3s ease;
+  }
+  .remove-bgcolor-scroll {
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+  }
+  .nav-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    overflow: visible;
+    top: 0;
+    background-color: var(--blue1);
+    padding: 0;
+  }
+  nav {
+    width: 100%;
+    padding: 40px 24px;
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .logo img {
+    width: 60px;
+  }
+  nav ul {
+    position: absolute;
+    list-style: none;
+    background-color: #000814b8;
+    backdrop-filter: blur(10px);
+    top: 148px;
+    width: 100% !important;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
+  }
+  .nav-container.active ul {
+    display: block;
+  }
+  #icon {
+    position: absolute;
+    right: 24px;
+    cursor: pointer;
+  }
+  #icon::before {
+    content: "\2630";
+    color: var(--white);
+    font-size: 2em;
+  }
+  .nav-container.active #icon::before {
+    content: "\2715";
+  }
+  nav li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    text-transform: uppercase;
+    font-size: 1.125em;
+    color: var(--white);
+  }
+  nav li a {
+    text-decoration: none;
+  }
+  nav li a:hover {
+    text-decoration: none;
+    color: var(--yellow2);
+  }
+  nav li a:active {
+    text-decoration: none;
+    color: var(--yellow2);
+  }
+  li.nav-telephone {
+    font-size: 1.5em;
+    background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    color: transparent;
+    text-align: center;
+  }
+  li.nav-telephone::before {
+    content: url(/images/icons/icon-telephone.svg);
+    left: 50px;
+    vertical-align: middle;
+  }
+  .grid-3 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* Footer */
+  .coordonnees, .sous-navigation,
+  .reseaux-sociaux, .mentions-legales {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  .coordonnees h6, .coordonnees li,
+  .sous-navigation h6, .sous-navigation li,
+  .reseaux-sociaux h6, .reseaux-sociaux li,
+  .mentions-legales p {
+    text-align: center;
+  }
 }
