--- a/styles.css
+++ b/styles.css
@@ -518,20 +518,42 @@ header {
   text-align: left;
 }
 /* Infos Pratiques */
+.acces, .horaires,
+.services, .paiement {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  margin-bottom: 16px;
+}
+.acces {
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.horaires {
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.services {
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+.paiement {
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
 .map-container {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 5;
   width: 100%;
   height: 600px;
   border-radius: 24px;
   overflow: hidden;
-  background-color: #000000;
 }
 .map-container iframe {
   width: 100%;
   height: 600px;
   overflow: hidden;
-}
-.acces, .horaires, .services {
-  margin-bottom: 40px;
 }
 .acces h4, .horaires h4,
 .services h4, .paiement h4 {
@@ -1182,6 +1204,31 @@ textarea {
 
 /* --- Smartphone --- */
 @media screen and  (max-width: 767px) {
+  /* --- Typographies --- */
+  h1 {
+    font-size: 3.75em;
+    line-height: normal;
+  }
+  h2 {
+    font-size: 2.5em;
+    line-height: normal;
+  }
+  h3 {
+    font-size: 2em;
+    line-height: normal;
+  }
+  h4 {
+    font-size: 2em;
+    line-height: normal;
+  }
+  h5 {
+    font-size: 1.5em;
+    line-height: normal;
+  }
+  h6 {
+    font-size: 1.125em;
+    line-height: normal;
+  }
 
   /* Général */
   .container {
@@ -1199,9 +1246,10 @@ textarea {
   .full-container {
     width: 100%;
   }
-  .grid-3 {
-    display: flex;
-    flex-direction: column;
+
+  /* --- CTA --- */
+  .cta {
+    margin-top: 40px;
   }
 
   /* Navigation mobile */
@@ -1308,11 +1356,85 @@ textarea {
     vertical-align: middle;
   }
 
+  /* --- Page d'Accueil --- */
+  /* Header */
+  .slogan p {
+    color: #6D879F;
+  }
+
+  /* Prestations */
+  .card-la-carte, .card-la-cave {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    min-height: 480px;
+    padding: 60px 24px;
+  }
+  .card-la-carte p, .card-la-cave p {
+    margin-top: 40px;
+  }
+
+  /* Qui Sommes-Nous */
+  .qui-sommes-nous {
+    background-color: var(--black2);
+    background-image: url(/images/bg-qui-sommes-nous-mb.png);
+    background-repeat: no-repeat;
+    background-position-y: top;
+    background-position-x: center;
+    background-size: 100%;
+  }
+  .texte-presentation {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-top: 340px;
+  }
+  .texte-presentation p {
+    padding: 0 24px;
+    color: var(--white);
+    text-align: left;
+  }
+
+  /* Infos Pratiques */
+  .acces, .map-container,
+  .horaires, .services,
+  .paiement {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 16px;
+  }
+  .acces {
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .map-container {
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .horaires {
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+  .services {
+    grid-row-start: 4;
+    grid-row-end: 5;
+  }
+  .paiement {
+    grid-row-start: 5;
+    grid-row-end: 6;
+    margin-bottom: 0px !important;
+  }
+
   /* Footer */
   .coordonnees, .sous-navigation,
   .reseaux-sociaux, .mentions-legales {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+  .reseaux-sociaux ul {
+    display: flex;
+    justify-content: space-around;
+  }
+  .reseaux-sociaux li {
+    margin-right: 0px;
   }
   .coordonnees h6, .coordonnees li,
   .sous-navigation h6, .sous-navigation li,
