--- a/styles.css
+++ b/styles.css
@@ -689,7 +689,15 @@ section.contact {
   display: flex;
   align-items: center;
 }
+.slideshow-dot {
+  display: none;
+}
 /* Menu & Carte */
+.filter-buttons {
+  display: none;
+}
+
+
 .card-menu {
   width: 100%;
   height: fit-content;
@@ -1112,8 +1120,9 @@ textarea {
     flex-direction: row;
     overflow: visible;
     top: 0;
-    background-color: var(--blue1);
     padding: 0;
+    background-color: var(--blue1);
+    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.25);
   }
   nav {
     width: 100%;
@@ -1229,6 +1238,10 @@ textarea {
     font-size: 1.125em;
     line-height: normal;
   }
+  p {
+    font-size: 1em;
+    line-height: normal;
+  }
 
   /* Général */
   .container {
@@ -1245,6 +1258,12 @@ textarea {
   }
   .full-container {
     width: 100%;
+  }
+  .head-degr-1 {
+    width: 100%;
+    height: 80vh !important;
+    flex-shrink: 0;
+    background: linear-gradient(#000814, #001D3D);
   }
 
   /* --- CTA --- */
@@ -1267,8 +1286,9 @@ textarea {
     flex-direction: row;
     overflow: visible;
     top: 0;
-    background-color: var(--blue1);
     padding: 0;
+    background-color: var(--blue1);
+    box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.25);
   }
   nav {
     width: 100%;
@@ -1442,4 +1462,102 @@ textarea {
   .mentions-legales p {
     text-align: center;
   }
+
+  /* --- Page La Carte --- */
+  /* Header */
+  .header-container-carte {
+    width: 100%;
+    height: auto;
+    padding: 0 24px 20px 24px;
+    background-image: url(/images/bg-header-la-carte-mb.png);
+    background-position-y: 148px;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .header-container-carte .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px 20px 24px;
+  }
+  .card-plats {
+    width: 100%;
+    padding: 0 24px 80px 24px;
+    background-color: var(--blue1);
+    background: linear-gradient(#001D3D, #000814);
+    position: relative;
+    margin: auto;
+  }
+  .img-card-plats {
+    display: none;
+    width: 100%;
+    height: 260px;
+    overflow: hidden;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .img-card-plats img {
+    width: 100%;
+    height: auto;
+  }
+  .slideshow-dot {
+    display: block;
+    position: absolute;
+    bottom: 96px;
+  }
+  .dot {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    margin: 0 2px;
+    background-color: var(--white);
+    border-radius: 50%;
+    border: 2px solid white;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  .active-dot, .dot:hover {
+    background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%);
+  }
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+  /* Menu */
+  .card-menu {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: none; /* Cache les cards sur mobile */
+  }
+  .filter-buttons {
+    width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: block;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+  .filter-buttons input[type="radio"] {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 26px;
+    height: 26px;
+    margin: 0;
+    border-radius: 50%;
+    background-color: #000000 !important;
+  }
+  .filter-buttons label {
+    margin: 0;
+  }
+  .card-menu.active {
+    display: block; /* Affiche les cards sur mobile */
+  }
+
+
 }
