--- a/styles.css
+++ b/styles.css
@@ -672,7 +672,7 @@ section.contact {
   background-position: top;
   background-repeat: no-repeat;
 }
-.card-plats {
+.slideshow-plats {
   width: 100%;
   height: auto;
   padding: 0 0 80px 0;
@@ -681,7 +681,7 @@ section.contact {
   display: flex;
   justify-content: center;
 }
-.img-card-plats {
+.content-slideshow-plats {
   width: 100%;
   height: 400px;
   overflow: hidden;
@@ -969,7 +969,7 @@ padding-right: 8px;
   align-items: center;
 }
 .swiper {
-  width: 1280px;
+  max-width: 1280px;
   height: fit-content;
   margin: 0 auto;
 }
@@ -989,7 +989,8 @@ padding-right: 8px;
 }
 .swiper-title, .swiper-text {
   max-width: 960px;
-  height: fit-content;
+  padding: 0 24px;
+  height: fit-content !important;
   margin: 0 auto;
 }
 .swiper-title {
@@ -1003,11 +1004,21 @@ padding-right: 8px;
 }
 .swiper-button-next, .swiper-button-prev {
   position: absolute !important;
-  top: var(--swiper-navigation-top-offset, 85%) !important;
+  top: var(--swiper-navigation-top-offset, 80%) !important;
   color: var(--white) !important;
 }
-.swiper-button-next:hover, .swiper-button-prev:hover {
-  color: var(--yellow2) !important;
+.swiper-pagination-bullet {
+  width: 16px !important;
+  height: 16px !important;
+  background: var(--grey1) !important;
+  opacity: 0.8 !important;
+  border: 2px solid white;
+}
+.swiper-pagination-bullet-active {
+  width: 16px !important;
+  height: 16px !important;
+  background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%) !important;
+  border: 2px solid white;
 }
 /* Fournisseurs */
 .fournisseur-card {
@@ -1515,7 +1526,7 @@ textarea {
     margin: 0 auto;
     padding: 0 24px 20px 24px;
   }
-  .card-plats {
+  .slideshow-plats {
     width: 100%;
     padding: 0 24px 80px 24px;
     background-color: var(--blue1);
@@ -1523,7 +1534,7 @@ textarea {
     position: relative;
     margin: auto;
   }
-  .img-card-plats {
+  .content-slideshow-plats {
     display: none;
     width: 100%;
     height: 260px;
@@ -1531,21 +1542,20 @@ textarea {
     grid-column-start: 1;
     grid-column-end: 3;
   }
-  .img-card-plats img {
+  .content-slideshow-plats img {
     width: 100%;
     height: auto;
   }
-  .slideshow-dot {
+  .slides-dot {
     display: block;
-    position: absolute;
-    bottom: 96px;
+    margin-top: 20px;
   }
   .dot {
     cursor: pointer;
     height: 16px;
     width: 16px;
     margin: 0 2px;
-    background-color: var(--white);
+    background-color: var(--grey2);
     border-radius: 50%;
     border: 2px solid white;
     display: inline-block;
@@ -1614,10 +1624,6 @@ textarea {
     color: var(--white);
     justify-content: end;
   }
-
-
-
-
   .list-prix li, .list-prix-vins li {
     font-size: 1.250em;
 
@@ -1631,6 +1637,97 @@ textarea {
   .vins-bulles .grid-1-3-1 .grid-roses-bulles {
     grid-column-start: 1;
     grid-column-end: 4;
+  }
+
+  /* --- Page A Propos --- */
+  /* Header */
+  .header-container-a-propos {
+    width: 100%;
+    height: auto;
+    padding: 0 24px 20px 24px;
+    background-image: url(/images/bg-header-a-propos-mb.png);
+    background-position-y: 148px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  .header-container-a-propos .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px 20px 24px;
+  }
+
+  /* Swiper */
+  .bg-swiper {
+    padding: 0 24px;
+  }
+  .swiper {
+    margin-top: 20px;
+    height: fit-content;
+  }
+  .swiper-img img {
+    margin-bottom: 40px;
+  }
+  .swiper-text {
+    height: fit-content !important;
+    padding: 0 24px;
+    margin-bottom: 80px;
+  }
+  .swiper-text p {
+    line-height: 1.5em;
+    text-align: left;
+  }
+  .swiper-button-next, .swiper-button-prev {
+    position: absolute !important;
+    top: var(--swiper-navigation-top-offset, 98px) !important;
+    color: var(--white) !important;
+  }
+  .swiper-pagination {
+    position: absolute !important;
+    top: var(--swiper-navigation-top-offset, 168px) !important;
+    color: var(--white) !important;
+  }
+  .swiper-pagination-bullet {
+    width: 16px !important;
+    height: 16px !important;
+    background: var(--grey1) !important;
+    opacity: 0.8 !important;
+    border: 2px solid white;
+  }
+  .swiper-pagination-bullet-active {
+    width: 16px !important;
+    height: 16px !important;
+    background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%) !important;
+    border: 2px solid white;
+  }
+  .swiper-button-prev:after, .swiper-button-next:after {
+    font-size: 24px !important;
+    font-weight: 900;
+  }
+
+  /* Fournisseurs */
+  .fournisseurs .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px;
+    margin-bottom: 60px;
+  }
+  .slideshow-fournisseurs {
+    width: 100%;
+    height: fit-content;
+    padding: 0 24px;
+    position: relative;
+    margin: auto;
+  }
+  .content-slideshow-fournisseurs {
+    display: none;
+    width: 100%;
+    height: fit-content;
+    overflow: hidden;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+  .fournisseur-card {
+    margin-bottom: 20px;
   }
 
 }
