--- a/styles.css
+++ b/styles.css
@@ -683,11 +683,14 @@ section.contact {
 }
 .content-slideshow-plats {
   width: 100%;
-  height: 400px;
+  max-height: 400px;
   overflow: hidden;
   border-radius: 24px;
   display: flex;
   align-items: center;
+}
+.content-slideshow-plats img {
+  width: fit-content;
 }
 .slideshow-dot {
   display: none;
@@ -1423,6 +1426,124 @@ textarea {
   .mentions-legales p {
     text-align: center;
   }
+
+  /* --- Page La Carte --- */
+  /* Header */
+  .header-container-carte {
+    width: 100%;
+    height: auto;
+    padding: 0 24px 20px 24px;
+    background-image: url(images/bg-header-la-carte.png);
+    background-position-y: 148px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  .header-container-carte .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px 20px 24px;
+  }
+  .slideshow-plats {
+    width: 100%;
+    padding: 0 24px 80px 24px;
+    background-color: var(--blue1);
+    background: linear-gradient(#001D3D, #000814);
+    position: relative;
+    margin: auto;
+  }
+  .content-slideshow-plats {
+    width: 100%;
+    max-height: 300px;
+    overflow: hidden;
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+  }
+  .content-slideshow-plats img {
+    width: 100%;
+  }
+  /* Menu */
+  .card-wrapper {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: none; /* Cache les cards sur mobile */
+  }
+  .card-wrapper.active {
+    display: block; /* Affiche les cards sur mobile */
+  }
+  .filter-buttons {
+    width: 600px;
+    margin: 0 auto;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+  .menu-radio {
+    margin: 0;
+    padding: 0;
+  }
+  .filter-buttons label {
+    margin: 0;
+  }
+  .content-card li {
+    font-size: 1em;
+    padding-bottom: 16px;
+  }
+
+  /* Menu */
+  .cave .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px 60px 24px;
+  }
+  .result-vins {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .card-vins {
+    width: 100%;
+  }
+  .list-vins {
+    vertical-align: middle;
+    padding-bottom: 16px;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.125em;
+    line-height: normal;
+    color: var(--white);
+  }
+  .list-prix-vins {
+    vertical-align: top;
+    padding-bottom: 16px;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.5em;
+    line-height: normal;
+    color: var(--white);
+    justify-content: end;
+  }
+  .list-prix li, .list-prix-vins li {
+    font-size: 1.250em;
+
+  }
+  .vins-rouges .grid-2 .content-result,
+  .vins-blancs .grid-2 .content-result {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .vins-roses .grid-1-3-1 .grid-roses-bulles,
+  .vins-bulles .grid-1-3-1 .grid-roses-bulles {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
 }
 
 /* --- Smartphone --- */
@@ -1778,6 +1899,9 @@ textarea {
   .content-card li {
     font-size: 1em;
     padding-bottom: 16px;
+  }
+  .card-vins {
+    width: 100%;
   }
   .list-vins {
     vertical-align: middle;
