--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@ footer {
   background: linear-gradient(#001D3D, #000814);
 }
 .container {
-  width: 1280px;
+  max-width: 1280px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -964,7 +964,7 @@ padding-right: 8px;
 .bg-swiper {
   width: 100%;
   height: fit-content;
-  padding: 0 0 80px 0;
+  padding: 0 24px 80px 24px;
   background-color: var(--blue1);
   background: linear-gradient(#000814, #001D3D);
   display: flex;
@@ -1024,6 +1024,9 @@ padding-right: 8px;
   border: 2px solid white;
 }
 /* Fournisseurs */
+.slideshow-fournisseurs {
+  width: fit-content;
+}
 .fournisseur-card {
   margin-bottom: 16px;
 }
@@ -1544,6 +1547,88 @@ textarea {
     grid-column-start: 1;
     grid-column-end: 4;
   }
+
+  /* --- Page A Propos --- */
+  /* Header */
+  .header-container-a-propos {
+    width: 100%;
+    height: auto;
+    padding: 0 24px 20px 24px;
+    background-image: url(images/bg-header-a-propos.png);
+    background-position-y: 148px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  .header-container-a-propos .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px 20px 24px;
+  }
+  /* Swiper */
+  .bg-swiper {
+    padding: 0 24px;
+  }
+  .swiper {
+    margin-top: 20px;
+    height: fit-content;
+  }
+  .swiper-slide {
+    font-size: 1em;
+  }
+  .swiper-img img {
+    margin-bottom: 40px;
+  }
+  .swiper-text {
+    height: fit-content !important;
+    padding: 0 24px;
+    margin-bottom: 80px;
+  }
+  .swiper-text p {
+    line-height: 1.5em;
+    text-align: left;
+  }
+  .swiper-button-next, .swiper-button-prev {
+    position: absolute !important;
+    top: var(--swiper-navigation-top-offset, 190px) !important;
+    color: var(--white) !important;
+  }
+  .swiper-pagination {
+    position: absolute !important;
+    top: var(--swiper-navigation-top-offset, 168px) !important;
+    color: var(--white) !important;
+  }
+  .swiper-pagination-bullet {
+    width: 16px !important;
+    height: 16px !important;
+    background: var(--grey1) !important;
+    opacity: 0.8 !important;
+    border: 2px solid white;
+  }
+  .swiper-pagination-bullet-active {
+    width: 16px !important;
+    height: 16px !important;
+    background: linear-gradient(0deg, rgba(255,195,0,1) 0%, rgba(255,214,10,1) 100%) !important;
+    border: 2px solid white;
+  }
+  .swiper-button-prev:after, .swiper-button-next:after {
+    font-size: 24px !important;
+    font-weight: 900;
+  }
+
+  /* Fournisseurs */
+  .fournisseurs .texte-intro {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 24px;
+    margin-bottom: 60px;
+  }
+  .slideshow-fournisseurs {
+    width: 100%;
+    height: fit-content;
+    padding: 0 24px;
+    position: relative;
+    margin: auto;
+  }
 }
 
 /* --- Smartphone --- */
@@ -1963,6 +2048,9 @@ textarea {
   .swiper {
     margin-top: 20px;
     height: fit-content;
+  }
+  .swiper-slide {
+    font-size: 1em !important;
   }
   .swiper-img img {
     margin-bottom: 40px;
