--- a/styles.css
+++ b/styles.css
@@ -738,7 +738,9 @@ section.contact {
   align-items: center;
 }
 .content-slideshow-plats img {
-  width: fit-content;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .slideshow-dot {
   display: none;
@@ -1543,6 +1545,8 @@ textarea {
   }
   .content-slideshow-plats img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   /* Menu */
   .card-wrapper {
@@ -2114,7 +2118,8 @@ textarea {
   }
   .content-slideshow-plats img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
   }
   .slides-dot {
     display: block;
@@ -2172,6 +2177,23 @@ textarea {
   .content-card li {
     font-size: 1em;
     padding-bottom: 16px;
+  }
+  .head-card h4 {
+    font-size: 1.875em;
+  }
+  .vins-container .filter-buttons {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
+  }
+  .vins-container .filter-buttons .menu-radio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  input[type="radio"].bt-radio + label {
+    padding-top: 0;
   }
   .card-vins {
     width: 100%;
